# tortellini

./: .gitignore  CMakeLists.txt  README.md  makefile  test.cc  torteliniw.nuspec  torteliniw.targets  tortellini.h  tortellini.hh
.cache/clangd/index/: catch2.hpp.A98A74FB056A6C75.idx  test.cc.433491A1A1B233E7.idx  tortellini.hh.2120E337A16EA616.idx
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml
include/: tortellini.hh
tests/: test.cc
